--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    font-size: 3.2rem; 
+   
     background-color: #2d313a; 
     color: white;
     height: 10rem;
@@ -14,6 +14,7 @@
 }
 .logo{
     padding: 0 4rem;
+     font-size: 3.2rem; 
 }
 
 .header__nav ul{
@@ -41,9 +42,15 @@
 }
 
 
+@media(max-width: 700px) {
+    .header__nav{
+        display: none;
+    }
 
-
-
+    .logo{
+        font-size: 2.1rem;
+    }
+}
 
 
 
